--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,18 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.codepath.engage">
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name=".Login">
+        android:supportsRtl="true">
+        <activity android:name=".Login" android:theme="@style/AppTheme">
+        </activity>
+        <activity android:name=".ViewEvents" android:theme="@style/ViewEventsTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.intent.action.SEARCH" />
+                <meta-data android:name="android.app.searchable"
+                    android:resource="@xml/searchable"/>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
