--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,6 @@ dependencies {
     compile 'com.loopj.android:android-async-http:1.4.9'
     compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     compile 'com.android.support:recyclerview-v7:25.3.1'
-
+    compile 'com.github.bumptech.glide:glide:3.8.0'
     testCompile 'junit:junit:4.12'
 }
