--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,9 +32,15 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.google.firebase:firebase-auth:11.0.2'
+    compile 'com.jakewharton:butterknife:8.4.0'
+    compile 'org.parceler:parceler-api:1.1.6'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
+    compile 'jp.wasabeef:glide-transformations:2.0.2'
     compile 'com.codepath.libraries:android-oauth-handler:1.2.5'
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     testCompile 'junit:junit:4.12'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
+    annotationProcessor 'org.parceler:parceler:1.1.6'
 }
