--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
          location permissions for the 'MyLocation' functionality. 
     -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
 
     <application
         android:name=".EventApp"
@@ -54,7 +56,15 @@
             android:theme="@style/AppTheme">
 
         </activity>
-
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyAb-qL9S_hAeFtES2zaQzcqsFpB4a_xAbA"
+            />
     </application>
 
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true"
+        />
+    
 </manifest>
