--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.codepath.engage">
 
+    <permission android:name="android.permission.ACCESS_FINE_LOCATION" android:protectionLevel="dangerous"/>
+    <permission android:name="android.permission.ACCESS_COARSE_LOCATION" android:protectionLevel="dangerous"/>
+
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
@@ -51,17 +54,30 @@
         <activity
             android:name=".EventDetailsActivity"
             android:theme="@style/AppTheme">
-
         </activity>
+
+        <activity
+            android:name=".MapActivity"
+            android:theme="@style/AppTheme">
+        </activity>
+
         <activity android:name=".HomePage" />
         <activity android:name=".IssueDetailsActivity">
 
         </activity>
 
+        <!--<meta-data-->
+            <!--android:name="com.google.android.geo.API_KEY"-->
+            <!--android:value="AIzaSyAb-qL9S_hAeFtES2zaQzcqsFpB4a_xAbA"-->
+            <!--/>-->
         <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyAb-qL9S_hAeFtES2zaQzcqsFpB4a_xAbA"
-            />
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="@string/google_maps_api_key" />
+
+        <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+
     </application>
 
     <uses-feature
