--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,8 @@ dependencies {
     compile 'com.google.android.gms:play-services-places:11.0.2'
     compile 'com.github.hotchemi:permissionsdispatcher:2.4.0'
     compile 'com.google.firebase:firebase-auth:11.0.2'
+    compile 'com.google.firebase:firebase-core:11.0.2'
+    compile 'com.google.firebase:firebase-database:11.0.2'
     compile 'com.jakewharton:butterknife:8.4.0'
     compile 'org.parceler:parceler-api:1.1.6'
     compile 'jp.wasabeef:glide-transformations:2.0.2'
