--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,10 @@
         android:name=".EventApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:label="@string/app_name"
+        android:label="Engage"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true">
+        android:supportsRtl="true"
+        android:theme="@style/AppTheme">
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -32,8 +33,7 @@
         </activity>
 
         <activity
-            android:name=".ViewEvents"
-            android:theme="@style/ViewEventsTheme">
+            android:name=".ViewEvents">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.SEARCH" />
@@ -44,7 +44,7 @@
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
-            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+            android:theme="@style/AppTheme" />
 
         <activity
             android:name=".EventDetailsActivity"
@@ -52,8 +52,12 @@
 
         </activity>
 
-        <activity android:name=".HomePage" />
-        <activity android:name=".IssueDetailsActivity"></activity>
+        <activity android:name=".HomePage"
+            android:theme="@style/AppTheme"/>
+        <activity android:name=".IssueDetailsActivity"
+            android:theme="@style/AppTheme">
+
+        </activity>
 
     </application>
 
