--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,34 +31,27 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity
-            android:name=".ViewEvents">
+        <activity android:name=".ViewEvents">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@style/AppTheme" />
-
         <activity
             android:name=".EventDetailsActivity"
-            android:theme="@style/AppTheme">
-
-        </activity>
-
-        <activity android:name=".HomePage"
-            android:theme="@style/AppTheme"/>
-        <activity android:name=".IssueDetailsActivity"
-            android:theme="@style/AppTheme">
-
-        </activity>
-
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".HomePage"
+            android:theme="@style/AppTheme" />
+        <activity
+            android:name=".IssueDetailsActivity"
+            android:theme="@style/AppTheme"></activity>
+        <activity android:name=".ProfileActivity"></activity>
     </application>
 
 </manifest>
