--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,14 +48,20 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".EventDetailsActivity"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme">
+
+        </activity>
         <activity
             android:name=".HomePage"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".IssueDetailsActivity"
-            android:theme="@style/AppTheme"></activity>
-        <activity android:name=".ProfileActivity"></activity>
+            android:theme="@style/AppTheme">
+
+        </activity>
+        <activity android:name=".ProfileActivity">
+
+        </activity>
 
         <activity
             android:name=".MapActivity"
