--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,24 +48,26 @@
             android:theme="@style/AppTheme" />
         <activity
             android:name=".EventDetailsActivity"
-            android:theme="@style/AppTheme"></activity>
+            android:theme="@style/AppTheme">
+
+        </activity>
         <activity
             android:name=".HomePage"
             android:theme="@style/AppTheme" />
         <activity
             android:name=".IssueDetailsActivity"
-            android:theme="@style/AppTheme"></activity>
-        <activity android:name=".ProfileActivity"></activity>
+            android:theme="@style/AppTheme">
+
+        </activity>
+        <activity android:name=".ProfileActivity">
+
+        </activity>
 
         <activity
             android:name=".MapActivity"
             android:theme="@style/AppTheme">
         </activity>
 
-        <!--<meta-data-->
-            <!--android:name="com.google.android.geo.API_KEY"-->
-            <!--android:value="AIzaSyAb-qL9S_hAeFtES2zaQzcqsFpB4a_xAbA"-->
-            <!--/>-->
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
             android:value="@string/google_maps_api_key" />
