--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,9 +41,11 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile files('libs/YouTubeAndroidPlayerApi.jar')
+
+    compile files('libs/YouTubeAndroidPlayerApi.jar')
+    compile 'com.github.bumptech.glide:glide:3.8.0'
+    compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.google.apis:google-api-services-youtube:v3-rev183-1.22.0'
-    compile 'com.github.bumptech.glide:glide:3.8.0'
-    compile 'com.github.bumptech.glide:glide:3.8.0'
     compile 'com.google.android.gms:play-services-maps:11.0.2'
     compile 'com.google.android.gms:play-services-location:11.0.2'
     compile 'com.google.android.gms:play-services-places:11.0.2'
@@ -61,13 +63,14 @@ dependencies {
     compile 'com.facebook.android:facebook-android-sdk:4.6.0'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support:design:25.3.1'
-    compile 'com.google.maps.android:android-maps-utils:0.5+'
-
+    compile 'com.google.maps.android:android-maps-utils:0.3.+'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     annotationProcessor 'org.parceler:parceler:1.1.6'
     annotationProcessor 'com.github.hotchemi:permissionsdispatcher-processor:2.4.0'
-    compile files('libs/YouTubeAndroidPlayerApi.jar')
+}
+configurations {
+    compile.exclude group: "org.apache.httpcomponents", module: "httpclient"
 }
 apply plugin: 'com.google.gms.google-services'
 
