--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="Engage"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@android:style/Theme.NoTitleBar">
+        android:supportsRtl="true">
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
@@ -45,7 +44,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ViewEvents">
+        <activity android:name=".ViewEvents"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.SEARCH"
                 />
@@ -69,7 +69,8 @@
             android:theme="@style/AppTheme">
         </activity>
 
-        <activity android:name=".ProfileActivity">
+        <activity android:name=".ProfileActivity"
+            android:theme="@style/AppTheme">
         </activity>
         <activity
             android:name=".MapActivity"
@@ -84,11 +85,13 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".CreateEventActivity">
+        <activity android:name=".CreateEventActivity"
+            android:theme="@style/AppTheme">
 
         </activity>
 
-        <activity android:name=".UserFeed">
+        <activity android:name=".UserFeed"
+            android:theme="@style/AppTheme">
 
         </activity>
     </application>
