--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
             android:value="@string/facebook_app_id" />
+
         <provider
             android:name="com.facebook.FacebookContentProvider"
             android:authorities="com.facebook.app.FacebookContentProvider1356409037788347"
@@ -43,43 +44,36 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".ViewEvents"
+        <activity
+            android:name=".ViewEvents"
             android:theme="@style/AppTheme">
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH"
-                />
+                <action android:name="android.intent.action.SEARCH" />
             </intent-filter>
         </activity>
-
         <activity
             android:name="com.facebook.FacebookActivity"
             android:configChanges="keyboard|keyboardHidden|screenLayout|screenSize|orientation"
             android:label="@string/app_name"
             android:theme="@style/AppTheme" />
-
         <activity
             android:name=".EventDetailsActivity"
-            android:theme="@style/AppTheme">
-        </activity>
-
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".HomePage"
             android:theme="@style/AppTheme" />
-
         <activity
             android:name=".IssueDetailsActivity"
-            android:theme="@style/AppTheme">
-        </activity>
-
-        <activity android:name=".ProfileActivity"
-            android:theme="@style/AppTheme">
-        </activity>
-
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".ProfileActivity"
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".FollowActivity"
+            android:theme="@style/AppTheme"></activity>
         <activity
             android:name=".MapActivity"
-            android:theme="@style/AppTheme">
-        </activity>
+            android:theme="@style/AppTheme"></activity>
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
@@ -88,13 +82,12 @@
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
 
-        <activity android:name=".CreateEventActivity"
-            android:theme="@style/AppTheme">
-        </activity>
-
-        <activity android:name=".UserFeed"
-            android:theme="@style/AppTheme">
-        </activity>
+        <activity
+            android:name=".CreateEventActivity"
+            android:theme="@style/AppTheme"></activity>
+        <activity
+            android:name=".UserFeed"
+            android:theme="@style/AppTheme"></activity>
 
     </application>
 
