--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,6 +70,7 @@ dependencies {
     compile 'com.android.support:design:25.3.1'
     compile 'com.google.maps.android:android-maps-utils:0.5+'
     compile 'com.mindorks:placeholderview:0.2.7'
+    compile 'de.hdodenhof:circleimageview:1.3.0'
     testCompile 'junit:junit:4.12'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     annotationProcessor 'org.parceler:parceler:1.1.6'
