--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -98,6 +98,10 @@
         <activity android:name=".UserFeed"
             android:theme="@style/AppTheme">
         </activity>
+
+        <activity android:name=".MyEventsActivity"
+            android:theme="@style/AppTheme">
+        </activity>
         <activity
             android:name=".ui.activities.SplashActivity"
             android:label="@string/app_name"
