--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -91,11 +91,12 @@
             android:theme="@style/AppTheme">
 
         </activity>
-        <activity
-            android:name=".MapActivity"
-            android:theme="@style/AppTheme">
 
-        </activity>
+        <!--<activity-->
+            <!--android:name=".MapActivity"-->
+            <!--android:theme="@style/AppTheme">-->
+
+        <!--</activity>-->
 
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
